--- a/trafficLightApp/Base.lproj/Main.storyboard
+++ b/trafficLightApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -14,21 +14,25 @@
             <objects>
                 <viewController modalPresentationStyle="overCurrentContext" id="BYZ-38-t0r" customClass="ViewController" customModule="trafficLightApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbN-Ap-AZv">
-                                <rect key="frame" x="144.66666666666666" y="830.66666666666663" width="140.99999999999997" height="47.333333333333371"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbN-Ap-AZv">
+                                <rect key="frame" x="89.5" y="500.5" width="141" height="47.5"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="47.5" id="c3I-rS-e8a"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="141" id="cGQ-na-2fp"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Next" cornerStyle="large">
-                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                <buttonConfiguration key="configuration" style="filled" title="START" cornerStyle="large">
+                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="28"/>
+                                    <color key="baseBackgroundColor" systemColor="tintColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="actionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oJl-Ez-t0p"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eiy-Ub-fMh" userLabel="RedView">
-                                <rect key="frame" x="165" y="92" width="100" height="100"/>
+                                <rect key="frame" x="110" y="33" width="100" height="100"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="l2t-y4-Q2V"/>
@@ -36,7 +40,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9e-vW-nws" userLabel="YellowView">
-                                <rect key="frame" x="165" y="258" width="100" height="100"/>
+                                <rect key="frame" x="110" y="199" width="100" height="100"/>
                                 <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="44A-UV-qRZ"/>
@@ -44,7 +48,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0sw-9v-wIu" userLabel="GreenView">
-                                <rect key="frame" x="165" y="424" width="100" height="100"/>
+                                <rect key="frame" x="110" y="365" width="100" height="100"/>
                                 <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="8Lm-kk-Jg7"/>
@@ -68,9 +72,10 @@
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="393" height="852"/>
                     <connections>
-                        <outlet property="greenLight" destination="0sw-9v-wIu" id="DWU-Sq-NIm"/>
-                        <outlet property="redLight" destination="Eiy-Ub-fMh" id="6uD-jd-42Y"/>
-                        <outlet property="yellowLight" destination="t9e-vW-nws" id="JP0-zw-oLw"/>
+                        <outlet property="button" destination="sbN-Ap-AZv" id="VbQ-Q0-obk"/>
+                        <outlet property="greenLight" destination="0sw-9v-wIu" id="4zb-Gl-2uD"/>
+                        <outlet property="redLight" destination="Eiy-Ub-fMh" id="4SR-eZ-086"/>
+                        <outlet property="yellowLight" destination="t9e-vW-nws" id="7ya-L1-sqD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -84,6 +89,9 @@
         </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
