--- a/trafficLightApp/Base.lproj/Main.storyboard
+++ b/trafficLightApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -14,11 +14,11 @@
             <objects>
                 <viewController modalPresentationStyle="overCurrentContext" id="BYZ-38-t0r" customClass="ViewController" customModule="trafficLightApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sbN-Ap-AZv">
-                                <rect key="frame" x="89.5" y="500.5" width="141" height="47.5"/>
+                                <rect key="frame" x="124.66666666666669" y="742.66666666666663" width="141" height="47.333333333333371"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47.5" id="c3I-rS-e8a"/>
@@ -31,42 +31,34 @@
                                     <action selector="actionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oJl-Ez-t0p"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eiy-Ub-fMh" userLabel="RedView">
-                                <rect key="frame" x="110" y="33" width="100" height="100"/>
-                                <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="l2t-y4-Q2V"/>
-                                    <constraint firstAttribute="height" constant="100" id="vJx-X4-JLR"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9e-vW-nws" userLabel="YellowView">
-                                <rect key="frame" x="110" y="183" width="100" height="100"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="44A-UV-qRZ"/>
-                                    <constraint firstAttribute="width" constant="100" id="cfP-c8-WJT"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0sw-9v-wIu" userLabel="GreenView">
-                                <rect key="frame" x="110" y="333" width="100" height="100"/>
-                                <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="8Lm-kk-Jg7"/>
-                                    <constraint firstAttribute="width" constant="100" id="ekg-3o-Gye"/>
-                                </constraints>
-                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="aQb-Th-v8V">
+                                <rect key="frame" x="111.33333333333333" y="77" width="167.33333333333337" height="593"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eiy-Ub-fMh" userLabel="RedView">
+                                        <rect key="frame" x="0.0" y="0.0" width="167.33333333333334" height="167.66666666666666"/>
+                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Eiy-Ub-fMh" secondAttribute="height" multiplier="1:1" id="NCs-Mf-ilm"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9e-vW-nws" userLabel="YellowView">
+                                        <rect key="frame" x="0.0" y="212.66666666666669" width="167.33333333333334" height="167.66666666666669"/>
+                                        <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0sw-9v-wIu" userLabel="GreenView">
+                                        <rect key="frame" x="0.0" y="425.33333333333331" width="167.33333333333334" height="167.66666666666669"/>
+                                        <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="0sw-9v-wIu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cqv-Hn-1UV"/>
-                            <constraint firstItem="t9e-vW-nws" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ld2-1j-cKV"/>
-                            <constraint firstItem="sbN-Ap-AZv" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0sw-9v-wIu" secondAttribute="bottom" constant="20" id="Lzd-dR-T7p"/>
-                            <constraint firstItem="Eiy-Ub-fMh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="33" id="My0-bw-PYR"/>
-                            <constraint firstItem="0sw-9v-wIu" firstAttribute="top" secondItem="t9e-vW-nws" secondAttribute="bottom" constant="50" id="OtL-ss-egJ"/>
-                            <constraint firstItem="t9e-vW-nws" firstAttribute="top" secondItem="Eiy-Ub-fMh" secondAttribute="bottom" constant="50" id="YyB-tE-I6A"/>
+                            <constraint firstItem="aQb-Th-v8V" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Lzx-Qb-gN9"/>
+                            <constraint firstItem="aQb-Th-v8V" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="dQH-cc-Oic"/>
                             <constraint firstItem="sbN-Ap-AZv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eju-0m-Hwy"/>
-                            <constraint firstItem="Eiy-Ub-fMh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qG6-Oo-kEd"/>
+                            <constraint firstItem="aQb-Th-v8V" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.702465" id="la7-xC-rWx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sbN-Ap-AZv" secondAttribute="bottom" constant="20" id="s5y-X1-CgK"/>
                         </constraints>
                     </view>
@@ -80,7 +72,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-110.23255813953489" y="2.5751072961373391"/>
+            <point key="canvasLocation" x="-110.625" y="2.112676056338028"/>
         </scene>
     </scenes>
     <resources>
